# dx12sandbox

./: CMakeLists.txt  README.md  make.rb
applications/: CMakelists.txt  clear_color_changer.cpp  helloWorld.cpp  simple_compute_pipeline.cpp  test_compute_pipeline.cpp
bento_old/src/: CMakeLists.txt
c_api/include/: allocator_c_api.h  gpu_backend_c_api.h  types_c_api.h
c_api/src/: CMakeLists.txt  allocator_c_api.cpp  gpu_backend_c_api.cpp
cmake/: CMakeMacros.cmake  CMakePlatforms.cmake
data/: compute_shader.cso
sdk/include/d3d12_backend/: dx12_backend.h  dx12_containers.h
sdk/include/gpu_backend/: compute_shader_descriptor.h  constant_buffer_type.h  dx12_backend.h  dx12_containers.h  dx12_utilities.h  event_collector.h  gpu_backend.h  gpu_types.h  graphics_buffer_type.h  graphics_format.h  render_target_descriptor.h  settings.h
sdk/src/: CMakeLists.txt
sdk/src/d3d12_backend/: dx12_backend._compute_shader.cpp  dx12_backend._graphics_device.cpp  dx12_backend._window.cpp  dx12_backend.cpp  dx12_backend_command_buffer.cpp  dx12_backend_graphics_resources.cpp  dx12_containers.cpp
sdk/src/gpu_backend/: compute_shader_descriptor.cpp  dx12_backend._compute_shader.cpp  dx12_backend._graphics_device.cpp  dx12_backend._window.cpp  dx12_backend.cpp  dx12_backend_command_buffer.cpp  dx12_backend_graphics_resources.cpp  dx12_containers.cpp  dx12_utilities.cpp  gpu_backend.cpp  (+2 more)
shaders/: IncrementBuffer.compute
tests/: CMakelists.txt  clear_color_changer.cpp  test_c_api.cpp  test_compute_pipeline.cpp  test_uav_barrier.cpp
tests/shaders/: BasicComputeShader.compute
(+1 files in other folders)
